# fund

./: .cursorrules  .env.example  .gitignore  CLAUDE.md  README.md  app.js  app.py  convert_faq_to_db.py  convert_law_to_db_sheets.py  database.py  debug_db_connection.py  export_law_data.py  law_data_export.json  pyproject.toml  run-app.ps1  script.js  test.html  test2.txt
.claude/: settings.local.json
archive/docs/: DIFY_RAG_SETUP.md  plan.md
archive/old_frontend/: package.json
archive/old_frontend/public/: index.html
archive/old_frontend/src/: App.css
archive/old_frontend/src/components/: ChatSidebar.css  ChatSidebar.tsx  Chatbot.css  Chatbot.tsx
archive/old_frontend/src/services/: chatService.ts  chatbotService.ts
archive/old_frontend/src/types/: index.ts
archive/old_html/: chat.html  index.html  index_backup.html
archive/scripts/: install-nodejs.bat  run-project.bat
archive/scripts/scripts/: convert_faq_for_dify.py
design/: README.md  app.js  index.html  law_data.js  script.js  styles.css
improve/: play.md  strategy.md  strategy_easy.md
static/css/: styles.css
static/js/: app.js
templates/: base.html  index.html
