[project]
name = "fund"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "openai>=1.106.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "fastapi>=0.122.0",
    "uvicorn>=0.38.0",
]
